Renamed Integration Test Project to cater for all services and beome a central place to test for Integration tests

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@
 /main/Quota/Quota.API.Integration.Test/bin/Debug
 /main/Quota/Quota.API.Integration.Test/obj
 /main/Quota/CurrencyServce.Test/obj/Debug
+/main/Quota/CurrencyServce.Test/bin/Debug
+/main/Quota/Quota.Integration.Test/bin/Debug
+/main/Quota/Quota.Integration.Test/obj
