--- a/main/Quota/Quota.Integration.Test/Quota.Integration.Test.csproj
+++ b/main/Quota/Quota.Integration.Test/Quota.Integration.Test.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{4BFC3ADB-1C2C-4D5B-AD40-9F6761355E59}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Quota.Api.Integration.Test</RootNamespace>
-    <AssemblyName>Quota.Api.Integration.Test</AssemblyName>
+    <RootNamespace>Quota.Integration.Test</RootNamespace>
+    <AssemblyName>Quota.Integration.Test</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -78,6 +78,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="CurrenciesControllerTests.cs" />
     <Compile Include="ValuesControllerTests.cs" />
   </ItemGroup>
   <ItemGroup>
