--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@
 /main/Quota/Quota.Integration.Test/obj
 /main/Quota/Quota.Gateway/bin
 /main/Quota/Quota.Gateway/obj
+/main/Quota/CurrencyService.Test/bin/Debug
+/main/Quota/CurrencyService.Test/obj/Debug
