Refactored Provider to return Feed Object instead of string Updated naming of deed tests Simplified CurrenciesController

--- a/main/Quota/CurrencyService/CurrencyService.csproj
+++ b/main/Quota/CurrencyService/CurrencyService.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Microsoft.ServiceFabric.AspNetCore.Kestrel" Version="2.7.198" />
     <PackageReference Include="Microsoft.ServiceFabric.Data" Version="2.7.198" />
     <PackageReference Include="Microsoft.ServiceFabric.Services" Version="2.7.198" />
+    <PackageReference Include="System.Net.Http.Formatting.Extension" Version="5.2.3" />
   </ItemGroup>
 
   <ItemGroup>
