--- a/main/Quota/CurrencyService.Test/packages.config
+++ b/main/Quota/CurrencyService.Test/packages.config
@@ -1,9 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Castle.Core" version="4.2.1" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Authentication.Abstractions" version="2.0.1" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Http.Abstractions" version="2.0.1" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Http.Features" version="2.0.1" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Mvc.Abstractions" version="2.0.1" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Routing.Abstractions" version="2.0.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Options" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Net.Http.Headers" version="2.0.1" targetFramework="net461" />
   <package id="Moq" version="4.8.0" targetFramework="net461" />
   <package id="MSTest.TestAdapter" version="1.1.18" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.1.18" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.4.0" targetFramework="net461" />
+  <package id="System.Text.Encodings.Web" version="4.4.0" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.4.0" targetFramework="net461" />
 </packages>
