--- a/main/Quota/Quota.Integration.Test/app.config
+++ b/main/Quota/Quota.Integration.Test/app.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <appSettings>
+    <add key="currenciesUrl" value="http://localhost:9058/api/currencies"/>
+    <add key="valueGatewayUrl" value="http://localhost:8712/api/values"/>
+  </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
