Added CurrencyService.Interfaces Project

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@
 /main/Quota/QuotationService/obj
 /main/Quota/QuotationService.Test/bin
 /main/Quota/QuotationService.Test/obj/Debug
+/main/Quota/CurrencyService.Interfaces/obj
