Cleaned up health controller Updated paths to gateway Fixed incorrect app setting value in gateway tests

--- a/main/Quota/Quota.Integration.Test/app.config
+++ b/main/Quota/Quota.Integration.Test/app.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="currenciesUrl" value="http://localhost:9058/api/currencies"/>
-    <add key="valueGatewayUrl" value="http://localhost:8712/api/values"/>
+    <add key="currenciesUrl" value="http://localhost:8712/GATEWAY/quotation"/>
+    <add key="valueGatewayUrl" value="http://localhost:8712/GATEWAY/values"/>
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
