--- a/main/Quota/Quota.Integration.Test/Quota.Integration.Test.csproj
+++ b/main/Quota/Quota.Integration.Test/Quota.Integration.Test.csproj
@@ -97,6 +97,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CurrenciesControllerTests.cs" />
+    <Compile Include="QuotesControllerTests.cs" />
     <Compile Include="ValuesControllerTests.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -113,6 +114,10 @@
     <ProjectReference Include="..\Quota.Common\Quota.Common.csproj">
       <Project>{9C261F00-D552-42C0-9B11-E73FC24A232F}</Project>
       <Name>Quota.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\QuotationService\QuotationService.csproj">
+      <Project>{EFD4AF1D-ED6C-49D6-8BED-D3880DD4B7BA}</Project>
+      <Name>QuotationService</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
