--- a/main/Quota/Quota.Integration.Test/app.config
+++ b/main/Quota/Quota.Integration.Test/app.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="currenciesUrl" value="http://localhost:8712/GATEWAY/quotation"/>
+    <add key="currenciesGatewayUrl" value="http://localhost:8712/GATEWAY/quotation"/>
     <add key="valueGatewayUrl" value="http://localhost:8712/GATEWAY/values"/>
+    <add key="quotesGatewayUrl" value="http://localhost:8712/GATEWAY/quotation"/>
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
