--- a/main/Quota/QuotationService.Test/QuotationService.Test.csproj
+++ b/main/Quota/QuotationService.Test/QuotationService.Test.csproj
@@ -371,6 +371,7 @@
   <ItemGroup>
     <Compile Include="QuoteControllerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuoteRequestTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
