--- a/main/Quota/QuotationService/QuotationService.csproj
+++ b/main/Quota/QuotationService/QuotationService.csproj
@@ -22,10 +22,13 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore" Version="2.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.0.1" />
-    <PackageReference Include="Microsoft.ServiceFabric" Version="5.7.198" />
-    <PackageReference Include="Microsoft.ServiceFabric.AspNetCore.Kestrel" Version="2.7.198" />
-    <PackageReference Include="Microsoft.ServiceFabric.Data" Version="2.7.198" />
-    <PackageReference Include="Microsoft.ServiceFabric.Services" Version="2.7.198" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.0.0" />
+    <PackageReference Include="Microsoft.ServiceFabric" Version="6.0.232" />
+    <PackageReference Include="Microsoft.ServiceFabric.AspNetCore.HttpSys" Version="2.8.232" />
+    <PackageReference Include="Microsoft.ServiceFabric.AspNetCore.Kestrel" Version="2.8.232" />
+    <PackageReference Include="Microsoft.ServiceFabric.Data" Version="2.8.232" />
+    <PackageReference Include="Microsoft.ServiceFabric.Services" Version="2.8.232" />
   </ItemGroup>
 
   <ItemGroup>
