--- a/main/Quota/QuotationService/QuotationService.csproj
+++ b/main/Quota/QuotationService/QuotationService.csproj
@@ -16,6 +16,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="ServiceReplicaListenerFactory.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
@@ -33,6 +37,10 @@
 
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Quota.CommonUtils\Quota.CommonUtils.csproj" />
   </ItemGroup>
 
 </Project>
