--- a/main/Quota/Quota.CommonUtils/packages.config
+++ b/main/Quota/Quota.CommonUtils/packages.config
@@ -42,6 +42,7 @@
   <package id="Microsoft.AspNetCore.Routing.Abstractions" version="2.0.1" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Server.HttpSys" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Server.Kestrel" version="1.0.0" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.StaticFiles" version="1.0.4" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.WebUtilities" version="2.0.1" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.Common" version="2.6.1" targetFramework="net461" />
@@ -60,6 +61,7 @@
   <package id="Microsoft.Extensions.DependencyModel" version="2.0.4" targetFramework="net461" />
   <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.FileProviders.Composite" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.FileProviders.Embedded" version="1.0.1" targetFramework="net461" />
   <package id="Microsoft.Extensions.FileProviders.Physical" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.FileSystemGlobbing" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Hosting.Abstractions" version="2.0.1" targetFramework="net461" />
@@ -69,6 +71,7 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.ObjectPool" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Options" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.PlatformAbstractions" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.WebEncoders" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.Net.Http.Headers" version="2.0.1" targetFramework="net461" />
@@ -86,6 +89,10 @@
   <package id="NETStandard.Library" version="2.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="Newtonsoft.Json.Bson" version="1.0.1" targetFramework="net461" />
+  <package id="Swashbuckle.AspNetCore" version="1.1.0" targetFramework="net461" />
+  <package id="Swashbuckle.AspNetCore.Swagger" version="1.1.0" targetFramework="net461" />
+  <package id="Swashbuckle.AspNetCore.SwaggerGen" version="1.1.0" targetFramework="net461" />
+  <package id="Swashbuckle.AspNetCore.SwaggerUI" version="1.1.0" targetFramework="net461" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net461" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
